<resources>
    <string name="app_name">DailyInsight</string>
    <string name="title_profile">프로필</string>
    <string name="title_stock_briefing">종목 브리핑</string>
    <string name="title_market_briefing">시장 브리핑</string>
    <string name="title_stock">종목</string>
    <string name="title_market_index">시장</string>
    <string name="title_stock_detail">종목 상세</string>
    <string name="title_stock_index_detail">코스피</string>
    <string name="today">오늘</string>
    <string name="yesterday">어제</string>
    <string name="index_placeholder">--</string>
    <!-- 상승/하락 텍스트: +1,234 (3.50%) 같은 형태 -->
    <string name="change_text">%1$s%2$s (%3$s%%)</string>
    <string name="price_won">%1$s</string>
    <string name="no_headline">헤드 라인 없음</string>
    <string name="net_income">Net Income</string>
    <string name="market_cap">Market Cap</string>
    <string name="current_share_outstanding">Current Share Outstanding</string>
    <string name="summary">summary</string>
    <string name="size">규모</string>
    <string name="value">가치</string>
    <string name="profitability">수익성</string>
    <string name="dividend">배당</string>
    <string name="error_generic">error_generic</string>
    <string name="_1W">1주</string>
    <string name="_1M">1개월</string>
    <string name="_3M">3개월</string>
    <string name="_6M">6개월</string>
    <string name="_9M">9개월</string>
    <string name="_YTD">연중</string>
    <string name="_1Y">1년</string>
    <string name="_3Y">3년</string>
    <string name="_5Y">5년</string>
    <string name="no_chart_data">no chart data</string>
    <string name="placeholder_loading">불러오는 중…</string>
    <string name="label_overview">전반</string>

    <!--toast messages-->
    <string name="not_implemented">서비스 준비중입니다</string>
    <string name="on_api_failure">네트워크 연결을 다시 확인해주세요</string>
    <string name="id_required">아이디를 입력해주세요</string>
    <string name="password_required">비밀번호를 입력해주세요</string>
    <string name="password_not_same">비밀번호가 일치하지 않습니다</string>
    <string name="on_login_unsuccessful">로그인에 실패했습니다. 아이디 또는 비밀번호를 다시 확인해주세요</string>
    <string name="on_change_successful">성공적으로 변경되었습니다</string>
<!--    <string name="on_signup_unsuccessful">이미 사용중인 아이디입니다</string>-->
    <string name="id_already_in_use">이미 사용중인 아이디입니다</string>
    <string name="on_change_password_unsuccessful">비밀번호 변경에 실패했습니다. 잠시 후 다시 시도해주세요</string>
    <string name="on_logout_successful">로그아웃 되었습니다</string>
    <string name="on_logout_unsuccessful">로그아웃에 실패했습니다. 잠시 후 다시 시도해주세요</string>
    <string name="on_withdraw_successful">성공적으로 탈퇴되었습니다</string>
    <string name="on_withdraw_unsuccessful">회원 탈퇴에 실패했습니다. 잠시 후 다시 시도해주세요</string>

    <!--dialog-->
    <string name="yes_button">네</string>
    <string name="no_button">아니오</string>
    <string name="neutral_button">취소</string>
    <string name="withdraw_dialog_title">정말 탈퇴하시겠습니까?</string>
    <string name="withdraw_dialog_content">탈퇴한 계정은 다시 복구할 수 없습니다</string>
    <string name="logout_dialog_title">정말 로그아웃 하시겠습니까?</string>

</resources>